// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRating should change icon on hover 1`] = `
<div class="v-rating v-theme--light">
  <label for="v-rating-4-0"
         class
  >
    <span class="v-rating__hidden">
      Rating 0 of 5
    </span>
  </label>
  <input class="v-rating__hidden"
         name="v-rating-4"
         id="v-rating-4-0"
         type="radio"
         value="0"
  >
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-4-1"
             class
      >
        <span class="v-rating__hidden">
          Rating 1 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-4"
             id="v-rating-4-1"
             type="radio"
             value="1"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-4-2"
             class
      >
        <span class="v-rating__hidden">
          Rating 2 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-4"
             id="v-rating-4-2"
             type="radio"
             value="2"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-4-3"
             class
      >
        <span class="v-rating__hidden">
          Rating 3 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-4"
             id="v-rating-4-3"
             type="radio"
             value="3"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-4-4"
             class
      >
        <span class="v-rating__hidden">
          Rating 4 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-4"
             id="v-rating-4-4"
             type="radio"
             value="4"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-4-5"
             class
      >
        <span class="v-rating__hidden">
          Rating 5 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-4"
             id="v-rating-4-5"
             type="radio"
             value="5"
      >
    </div>
  </div>
</div>
`;

exports[`VRating should render a scoped item slot 1`] = `
<div class="v-rating v-theme--light">
  <label for="v-rating-5-0"
         class
  >
    <span class="v-rating__hidden">
      Rating 0 of 5
    </span>
  </label>
  <input class="v-rating__hidden"
         name="v-rating-5"
         id="v-rating-5-0"
         type="radio"
         value="0"
  >
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-5-1"
             class
      >
        <span class="v-rating__hidden">
          Rating 1 of 5
        </span>
        <div>
          0
        </div>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-5"
             id="v-rating-5-1"
             type="radio"
             value="1"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-5-2"
             class
      >
        <span class="v-rating__hidden">
          Rating 2 of 5
        </span>
        <div>
          1
        </div>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-5"
             id="v-rating-5-2"
             type="radio"
             value="2"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-5-3"
             class
      >
        <span class="v-rating__hidden">
          Rating 3 of 5
        </span>
        <div>
          2
        </div>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-5"
             id="v-rating-5-3"
             type="radio"
             value="3"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-5-4"
             class
      >
        <span class="v-rating__hidden">
          Rating 4 of 5
        </span>
        <div>
          3
        </div>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-5"
             id="v-rating-5-4"
             type="radio"
             value="4"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-5-5"
             class
      >
        <span class="v-rating__hidden">
          Rating 5 of 5
        </span>
        <div>
          4
        </div>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-5"
             id="v-rating-5-5"
             type="radio"
             value="5"
      >
    </div>
  </div>
</div>
`;

exports[`VRating should render a scoped item-label slot 1`] = `
<div class="v-rating v-theme--light">
  <label for="v-rating-6-0"
         class
  >
    <span class="v-rating__hidden">
      Rating 0 of 5
    </span>
  </label>
  <input class="v-rating__hidden"
         name="v-rating-6"
         id="v-rating-6-0"
         type="radio"
         value="0"
  >
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-6-1"
             class
      >
        <span class="v-rating__hidden">
          Rating 1 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-6"
             id="v-rating-6-1"
             type="radio"
             value="1"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-6-2"
             class
      >
        <span class="v-rating__hidden">
          Rating 2 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-6"
             id="v-rating-6-2"
             type="radio"
             value="2"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-6-3"
             class
      >
        <span class="v-rating__hidden">
          Rating 3 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-6"
             id="v-rating-6-3"
             type="radio"
             value="3"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-6-4"
             class
      >
        <span class="v-rating__hidden">
          Rating 4 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-6"
             id="v-rating-6-4"
             type="radio"
             value="4"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-6-5"
             class
      >
        <span class="v-rating__hidden">
          Rating 5 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-6"
             id="v-rating-6-5"
             type="radio"
             value="5"
      >
    </div>
  </div>
</div>
`;

exports[`VRating should respond to prop value changes 1`] = `
<div class="v-rating v-theme--light">
  <label for="v-rating-0-0"
         class
  >
    <span class="v-rating__hidden">
      Rating 0 of 5
    </span>
  </label>
  <input class="v-rating__hidden"
         name="v-rating-0"
         id="v-rating-0-0"
         type="radio"
         value="0"
  >
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-1"
             class
      >
        <span class="v-rating__hidden">
          Rating 1 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-1"
             type="radio"
             value="1"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-2"
             class
      >
        <span class="v-rating__hidden">
          Rating 2 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-2"
             type="radio"
             value="2"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-3"
             class
      >
        <span class="v-rating__hidden">
          Rating 3 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-3"
             type="radio"
             value="3"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-4"
             class
      >
        <span class="v-rating__hidden">
          Rating 4 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-4"
             type="radio"
             value="4"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-5"
             class
      >
        <span class="v-rating__hidden">
          Rating 5 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-5"
             type="radio"
             value="5"
      >
    </div>
  </div>
</div>
`;

exports[`VRating should respond to prop value changes 2`] = `
<div class="v-rating v-theme--light">
  <label for="v-rating-0-0"
         class
  >
    <span class="v-rating__hidden">
      Rating 0 of 5
    </span>
  </label>
  <input class="v-rating__hidden"
         name="v-rating-0"
         id="v-rating-0-0"
         type="radio"
         value="0"
  >
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-1"
             class
      >
        <span class="v-rating__hidden">
          Rating 1 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-1"
             type="radio"
             value="1"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-2"
             class
      >
        <span class="v-rating__hidden">
          Rating 2 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-2"
             type="radio"
             value="2"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-3"
             class
      >
        <span class="v-rating__hidden">
          Rating 3 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-3"
             type="radio"
             value="3"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-4"
             class
      >
        <span class="v-rating__hidden">
          Rating 4 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-4"
             type="radio"
             value="4"
      >
    </div>
  </div>
  <div class="v-rating__wrapper">
    <div class="v-rating__item">
      <label for="v-rating-0-5"
             class
      >
        <span class="v-rating__hidden">
          Rating 5 of 5
        </span>
        <span type="button"
              class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-plain"
        >
          <div class="v-btn__overlay">
          </div>
          <div class="v-btn__underlay">
          </div>
          <i class="mdi-star-outline mdi v-icon notranslate v-icon--size-default v-btn__icon"
             aria-hidden="true"
          >
          </i>
        </span>
      </label>
      <input class="v-rating__hidden"
             name="v-rating-0"
             id="v-rating-0-5"
             type="radio"
             value="5"
      >
    </div>
  </div>
</div>
`;
